hypothetically, you don't need adb installed anymore. Unfortunately, it's a lot buggier now.